[DEV-27126] center aligns the privacy notice letter 'i' correctly

--- a/public/stylesheets/betterplace-widget.css
+++ b/public/stylesheets/betterplace-widget.css
@@ -195,7 +195,9 @@ iefallback {
     position: absolute;
     bottom: 3px;
     right: 3px;
-    display: block;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 50%;
     width: 15px;
     height: 15px;
